# cogbench

./: .gitignore  AUDIT.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
cogbenchv2/: __init__.py  __main__.py  cli.py  config.py
cogbenchv2/analysis/: __init__.py
cogbenchv2/constraints/: __init__.py  adversarial.py  base.py  registry.py  semantic.py  structural.py  universal.py
cogbenchv2/data/passages/biology/: passages.json
cogbenchv2/data/passages/economics/: passages.json
cogbenchv2/data/passages/psychology/: passages.json
cogbenchv2/evaluation/: __init__.py  evaluate.py  metrics.py
cogbenchv2/generation/: __init__.py  extract.py  generate.py  prompts.py
cogbenchv2/passages/: __init__.py  processor.py  scraper.py
data/passages/chemistry/: passages.json
data/passages/computer_science/: passages.json
data/passages/history/: passages.json
data/passages/mathematics/: passages.json
data/passages/physics/: passages.json
docs/: CNAME  data.json  index.html
leaderboard/: data.json  index.html
scripts/: populate_leaderboard.py  reeval_all.py  run_all_local.py  run_benchmark.py  run_new_models.sh  run_remaining.sh  scrape_passages.py
tests/: test_constraints.py
