[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cogbench"
version = "1.1.0"
description = "CogBench — Verifiable Cognitive Constraint Benchmark for LLM Question Generation"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "CogBench Team"},
]
keywords = ["benchmark", "llm", "bloom-taxonomy", "question-generation", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "requests>=2.28",
    "torch>=2.0",
    "transformers>=4.30",
    "beautifulsoup4>=4.11",
]

[project.optional-dependencies]
nlp = ["spacy>=3.5"]
dev = ["pytest>=7.0"]
all = ["spacy>=3.5", "pytest>=7.0"]

[project.scripts]
cogbench = "cogbenchv2.cli:main"

[project.urls]
Homepage = "https://github.com/cogbench/cogbench"

[tool.setuptools.packages.find]
include = ["cogbenchv2*"]

[tool.setuptools.package-data]
cogbenchv2 = ["data/passages/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
