[metadata]
name = cogbench
version = 1.0.0
description = CogBench — Verifiable Cognitive Constraint Benchmark for LLM Question Generation
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = CogBench Team
keywords = benchmark, llm, bloom-taxonomy, question-generation, evaluation
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.9
packages = find:
install_requires =
    numpy>=1.24
    requests>=2.28
    torch>=2.0
    transformers>=4.30
    beautifulsoup4>=4.11

[options.packages.find]
include =
    cogbenchv2*

[options.package_data]
cogbenchv2 = data/passages/**/*.json

[options.extras_require]
nlp = spacy>=3.5
dev = pytest>=7.0
all =
    spacy>=3.5
    pytest>=7.0

[options.entry_points]
console_scripts =
    cogbench = cogbenchv2.cli:main

[tool:pytest]
testpaths = tests
